<resources>
    //Ramesh Narayan Gaire N01452430, ONA
    //Roshan Shrestha N01457532, ONA
    // Rushi Bhandari N01464259, ONA
    // Komal Bamotra N01426087,ONA

    <string name="app_name">Smart Parking</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Parking (1.0)</string>
    <string name="nav_header_subtitle">friendsandco@smartparking.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="message">Do you want to go back?</string>
    <string name="alert_title">Really Exit?</string>
    <string name="alert_message">Are you sure you want to exit?</string>

    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="booking_details">Booking Details</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="home_title">Home</string>
    <string name="booking_title">Booking</string>
    <string name="booking_details_title">Booking Details</string>
    <string name="communication_title">Communication</string>
    <string name="support_title">Support</string>
    <string name="share_title">Share</string>
    <string name="others_title">Others</string>
    <string name="settings_title">Settings</string>
    <string name="logout_title">Logout</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>

    <string name="booking_form">BOOKING FORM</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="date">Date</string>
    <string name="book">BOOK</string>
    <string name="name">Name:</string>
    <string name="book_date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="booking_duration">Duration(in hrs)</string>
    <string name="email">Email:</string>
    <string name="booking_detail">BOOKING DETAILS</string>
    <string name="book_space">BOOK</string>
    <string name="share_info">SHARE</string>
    <string name="support_center">SUPPORT</string>
    <string name="feedback">FEEDBACK</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="choose_the_way_to_share">CHOOSE THE WAY TO SHARE</string>
    <string name="call_us">Call Us</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="live_chat">Live Chat</string>
    <string name="e_mail">E-mail</string>
    <string name="item_home">Home</string>
    <string name="item_booking">Booking</string>
    <string name="item_booking_details">Booking Details</string>
    <string name="item_communication">Communication</string>
    <string name="item_support">Support</string>
    <string name="item_share">Share</string>
    <string name="item_others">Others</string>
    <string name="item_settings">Settings</string>
    <string name="item_logout">Logout</string>
    <string name="copyright">Copyright &#169; F.R.I.E.N.D.S.&amp; CO.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About Us</string>
    <string name="first_sentence">The sensors are well known for their accuracy of detecting a vehicle presence The sensor located at the entrance and exit of a parking area will count with high accuracy the entrance and exit of the vehicles, taking into consideration even two cars stopping very close to each other.</string>
    <string name="second_sentence">The total cost of solution considering the initial purchasing and installation cost, you will have low maintenance cost and no need of replacing batteries.</string>
    <string name="third_sentence">The sensors will just count the vehicles without recording any data. The system is not based on cameras, but again on sensors and eventually a display for counting the cars. Therefore, the privacy is totally granted.</string>
    <string name="title_info">Wanna know how we work??</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="Login">Login</string>
    <string name="not_registered_yet">Not registered yet</string>
    <string name="register_here">Register here</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="confim_password">Confim Password</string>
    <string name="register1">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="login_here">Login here</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="what_do_you_think_about_this_appication">What do you think about this appication?</string>
    <string name="send">Send</string>
    <string name="enable_night_mode">Enable night Mode</string>
    <string name="on">On</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="potrait">Potrait</string>
    <string name="landscape">Landscape</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="on_off">On/Off</string>
    <string name="change_password">Change Password</string>
    <string name="give_us_feedback">Give us Feedback!</string>
    <string name="gmail">Gmail</string>
    <string name="teams">Teams</string>
    <string name="messenger">Messenger</string>
    <string name="instagram">Instagram</string>
    <string name="message1">Message</string>
    <string name="viber">Viber</string>
    <string name="collaborators">Collaborators</string>
    <string name="collaborators1">COLLABORATORS</string>
    <string name="ramesh_narayan_gaire">RAMESH NARAYAN GAIRE</string>
    <string name="komal_bamotra">KOMAL BAMOTRA</string>
    <string name="roshan_shrestha">ROSHAN SHRESTHA</string>
    <string name="rushi_bhandari">RUSHI BHANDARI</string>
    <string name="Invalid_email">Invalid email</string>
    <string name="checkbox1">checkbox1</string>
    <string name="rememberMe">remember</string>
    <string name="please_in_sing">Please Sign in</string>
    <string name="checkbox">checkbox1</string>
    <string name="remember_me_2">rememberme</string>
    <string name="checked">Checked</string>
    <string name="checkbox_box">checkbox1</string>
    <string name="remember_me_too">rememberme</string>
    <string name="uncheck">Unchecked</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="booking_date">Booking Date</string>
    <string name="bookingduration">Duration</string>
    <string name="booking_name">BookingName</string>
    <string name="booking_contact">BookingContact</string>
    <string name="bookingdate">BookingDate</string>
    <string name="booking_duration1">BookingDuration</string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>