<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_local_parking_24"
            android:title="@string/item_home" />

        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_baseline_bookmark_added_24"
            android:title="@string/item_booking" />

        <item
            android:id="@+id/nav_booking_detail"
            android:icon="@drawable/ic_baseline_library_books_24"
            android:title="@string/item_booking_details" />
    </group>

    <item android:title="@string/item_communication">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/ic_baseline_contact_support_24"
                    android:title="@string/item_support" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_baseline_share_24"
                    android:title="@string/item_share" />
            </group></menu>
    </item>

    <item android:title="@string/item_others">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_baseline_settings_24"
                    android:title="@string/item_settings" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/item_logout" />
            </group>
        </menu>
    </item>
</menu>