<?xml version="1.0" encoding="utf-8"?>

<!--
   //Ramesh Narayan Gaire N01452430, ONA
    //Roshan Shrestha N01457532, ONA
    // Rushi Bhandari N01464259, ONA
    // Komal Bamotra N01426087,ONA
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ShareFragment">


    <TextView
        android:id="@+id/textView20"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:text="@string/about_us"
        android:textSize="29sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="403dp"
        android:layout_height="212dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/car_parking_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="387dp"
        android:layout_height="127dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="338dp"
        android:text="@string/first_sentence"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="389dp"
        android:layout_height="101dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="472dp"
        android:text="@string/second_sentence"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="390dp"
        android:layout_height="144dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="581dp"
        android:text="@string/third_sentence"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="287dp"
        android:text="@string/title_info"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>