<?xml version="1.0" encoding="utf-8"?>

<!--
   //Ramesh Narayan Gaire N01452430, ONA
    //Roshan Shrestha N01457532, ONA
    // Rushi Bhandari N01464259, ONA
    // Komal Bamotra N01426087,ONA
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FeedbackFragment">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="100dp"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/RatingBar"/>

        <TextView
            android:id="@+id/textView22"
            android:layout_width="209dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:text="@string/rate_and_review"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userReviewText"
        android:layout_width="378dp"
        android:layout_height="98dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="200dp"
        android:hint="@string/what_do_you_think_about_this_appication"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="350dp"
        android:text="@string/send" />


</FrameLayout>