<?xml version="1.0" encoding="utf-8"?>

<!--
   //Ramesh Narayan Gaire N01452430, ONA
    //Roshan Shrestha N01457532, ONA
    // Rushi Bhandari N01464259, ONA
    // Komal Bamotra N01426087,ONA
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookingFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingFragment">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="223dp"
        android:layout_height="244dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/parking_booth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="236dp"
        android:layout_height="50dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:text="@string/booking_form"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="29dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/rectangleshape"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:hint="@string/full_name"
        android:maxLength="25"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/rectangleshape"
        android:digits="0123456789+"
        android:hint="@string/contact_number"
        android:inputType="phone"
        android:maxLength="10"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/date"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="484dp"
        android:background="@drawable/rectangleshape"
        android:hint="@string/date"
        android:inputType="date"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/duration"
        android:layout_width="327dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="544dp"
        android:background="@drawable/rectangleshape"
        android:hint="@string/booking_duration"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/book_button"
        android:layout_width="158dp"
        android:layout_height="57dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="644dp"
        android:text="@string/book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="145dp"
        android:layout_height="241dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P1" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P2" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P3" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="P4" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>