<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SupportFragment">


    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="199dp"
        android:layout_height="244dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="356dp"
        android:src="@drawable/call_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="94dp"
        android:layout_height="37dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="616dp"
        android:text="@string/call_us"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="202dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/get_in_touch"
        android:textAlignment="center"
        android:textSize="29dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="123dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="368dp"
        android:text="@string/live_chat"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="660dp"
        android:text="@string/e_mail"
        android:textSize="25dp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="199dp"
        android:layout_height="138dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="216dp"
        android:src="@drawable/livechat_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="191dp"
        android:layout_height="163dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="488dp"
        android:src="@drawable/emailing_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="191dp"
        android:layout_height="287dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="31dp"
        android:src="@drawable/contacting_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>